[package]
name = "pimp-my-axis"
description = "Virtual axis tool."
repository = "https://github.com/MHajoha/pimp-my-axis"
version = "0.1.0"
authors = ["Maximilian Haye <mhajoha@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
uinput = "^0.1.3"
evdev-rs = "^0.5.0"
nix = "^0.22.0"
serde = { version = "^1.0.126", features = ["derive"] }
serde_yaml = "^0.8.17"
regex = "^1.5.4"
lazy_static = "^1.4.0"
pest = "^2.1.3"
pest_derive = "^2.1.0"
clap = "^3.0.0-beta.2"
log = "^0.4.14"
env_logger = "^0.9.0"
xdg = "^2.2.0"
libudev = "^0.3.0"

[package.metadata.deb]
section = "utils"
depends = "libc6 (>= 2.28), libudev1 (>= 241)"
assets = [
    ["target/release/pimp-my-axis", "usr/bin/", "755"],
    ["assets/pimp-my-axis.service", "usr/lib/systemd/system/", "644"]
]
